[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "constellation"
version = "0.1.0"
description = "The constellation package for chemistry models"
readme = "README.md"
authors = [{name = "Luis Mantilla", email = "contact@orion.ml"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "torch==1.13.1",
    "torchvision==0.14.1",
    "validators==0.18.2",
    "scikit-learn>=1.3.2",
    "transformers>=4.34.1",
    "ml-collections>=0.1.1"
]

requires-python = ">=3.9"