[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
constellatio = ["tokenizers/mofid_llm_tokenizer/*.json"]

[project]
name = "constellatio"
version = "0.1.0"
description = "The constellatio package for chemistry models"
readme = "README.md"
authors = [{name = "Luis Mantilla", email = "contact@orion.ml"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "datasets>=2.14.6",
    "lightning>=1.9.5",
    "ml-collections>=0.1.1",
    "selfies>=2.1.1",
    "torch>=2.1.0",
    "tqdm>=4.66.1",
    "transformers>=4.34.1",
    "validators==0.18.2"
]

requires-python = ">=3.9"